# aur-guard

./: CLAUDE.md  Cargo.toml  LICENSE  README.md
.github/workflows/: release.yml
data/: fr.xhelliom.AurGuard.desktop
docs/: index.html
packaging/aur/: PKGBUILD
po/: fr.po  install.sh
src/: ai.rs  aur.rs  config.rs  deploy.rs  i18n.rs  lib.rs  main.rs  pipeline.rs  scan.rs  tui.rs
