[package]
name = "aur-guard"
version = "0.1.0"
edition = "2021"
description = "Garde-fou de sécurité pour les mises à jour AUR : délai, whitelist, scan statique et review IA du diff PKGBUILD"
license = "MIT"
repository = "https://github.com/Xhelliom/aur-guard"

[lib]
name = "aur_guard"
path = "src/lib.rs"

[[bin]]
name = "aur-guard"
path = "src/main.rs"

[[bin]]
name = "aur-guard-gui"
path = "src/bin/gui.rs"
required-features = ["gui"]

[features]
default = ["tui"]
tui = ["dep:ratatui", "dep:crossterm"]
gui = ["dep:gtk4", "dep:libadwaita", "dep:async-channel"]

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
ureq = { version = "2", features = ["json", "tls"] }
anyhow = "1"
dirs = "5"
gettext-rs = { version = "0.7", features = ["gettext-system"] }
ratatui = { version = "0.29", optional = true }
crossterm = { version = "0.28", optional = true }
gtk4 = { version = "0.9", optional = true }
libadwaita = { version = "0.7", optional = true, features = ["v1_5"] }
async-channel = { version = "2", optional = true }

[profile.release]
strip = true
lto = true
opt-level = "z"
